<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@color/grey"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/grey"
        app:tint="?colorPrimary"
        app:srcCompat="@drawable/ic_outline_shopping_cart_36"
        />

    <TextView
        android:id="@+id/cart_list_item_text"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/grey"
        android:text="1520m"
        android:textSize="20sp"
        />

    <ImageButton
        android:id="@+id/cart_list_item_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/grey"
        app:srcCompat="@drawable/ic_outline_map_36"
        app:tint="?colorPrimary"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/cart_list_item_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/grey"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_outline_done_36"
        app:tint="?colorPrimary"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/cart_list_item_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/grey"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_outline_clear_36"
        app:tint="?colorPrimary"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />


</LinearLayout>