...
            android:text="@string/cart_list"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_margin="5sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_list_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


...
